kubernetes/kafka-message-broker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../src/message_broker/docker-compose.yaml
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: kafka-message-broker
  name: kafka-message-broker
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: kafka-message-broker
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../src/message_broker/docker-compose.yaml
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/message-broker-default: "true"
        io.kompose.service: kafka-message-broker
    spec:
      containers:
        - env:
            - name: KAFKA_ADVERTISED_LISTENERS
              value: PLAINTEXT://localhost:9092
            - name: KAFKA_ZOOKEEPER_CONNECT
              value: zookeeper:2181
          image: bitnami/kafka:latest
          name: kafka-message-broker
          ports:
            - containerPort: 9092
          resources: {}
      restartPolicy: Always
status: {}
